rhai/codegen/ui_tests/return_mut_ref.stderr
error: Rhai functions cannot return references
  --> $DIR/return_mut_ref.rs:12:38
   |
12 | pub fn test_fn(input: &mut Clonable) -> &mut bool {
   |                                      ^^^^^^^^^^^^

error[E0425]: cannot find function `test_fn` in this scope
  --> $DIR/return_mut_ref.rs:23:8
   |
23 |     if test_fn(n) {
   |        ^^^^^^^ not found in this scope
